--- a/BusinessObject/BusinessObject_Desktop.csproj
+++ b/BusinessObject/BusinessObject_Desktop.csproj
@@ -3,31 +3,31 @@
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
 		<TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
-		<RootNamespace>CustomAppointment</RootNamespace>
+		<RootNamespace>BusinessObject</RootNamespace>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<Platforms>x86;x64;arm64</Platforms>
 		<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
-		<AssemblyName>CustomAppointment</AssemblyName>
+		<AssemblyName>BusinessObject</AssemblyName>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
 		<DefineConstants>WinUI_Desktop</DefineConstants>
 	</PropertyGroup>
 	<ItemGroup>
 		<Compile Remove="Assets\**" />
-		<Compile Remove="CustomAppointment_Desktop\**" />
+		<Compile Remove="BusinessObject_Desktop\**" />
 		<Compile Remove="Model\**" />
 		<Compile Remove="ViewModel\**" />
 		<Content Remove="Assets\**" />
 		<EmbeddedResource Remove="Assets\**" />
-		<EmbeddedResource Remove="CustomAppointment_Desktop\**" />
+		<EmbeddedResource Remove="BusinessObject_Desktop\**" />
 		<EmbeddedResource Remove="Model\**" />
 		<EmbeddedResource Remove="ViewModel\**" />
 		<None Remove="Assets\**" />
-		<None Remove="CustomAppointment_Desktop\**" />
+		<None Remove="BusinessObject_Desktop\**" />
 		<None Remove="Model\**" />
 		<None Remove="ViewModel\**" />
 		<Page Remove="Assets\**" />
-		<Page Remove="CustomAppointment_Desktop\**" />
+		<Page Remove="BusinessObject_Desktop\**" />
 		<Page Remove="Model\**" />
 		<Page Remove="ViewModel\**" />
 	</ItemGroup>
@@ -36,7 +36,7 @@
 		<Compile Remove="Properties\AssemblyInfo.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<None Remove="CustomAppointment_UWP_TemporaryKey.pfx" />
+		<None Remove="BusinessObject_UWP_TemporaryKey.pfx" />
 		<None Remove="MainPage.xaml" />
 		<None Remove="Properties\Default.rd.xml" />
 	</ItemGroup>
@@ -45,7 +45,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="Model\Event.cs" />
-		<Compile Include="ViewModel\CustomAppointmentViewModel.cs" />
+		<Compile Include="ViewModel\BusinessObjectViewModel.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
